--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-md-4 col-md-offset-4">
           <!-- Search and Button -->
           <div class="input-area">
-            <input type="text" class="form-control" placeholder="Search things to do">
+            <input id="search-box" type="text" class="form-control" placeholder="Search things to do">
 
             <button id="search-button">LETS GO!</button>
           </div>
