--- a/index.html
+++ b/index.html
@@ -16,34 +16,6 @@
 </head>
 
 <body>
-  <!-- Navigation Links -->
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-          aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <!-- <a class="navbar-brand" href="#">IAMBORED</a> -->
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active">
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#about">About</a>
-          </li>
-          <li>
-            <a href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
   <div class="container-fluid">
     <div class="all-container">
@@ -57,31 +29,58 @@
 
             <div class="description">
               <p>So your bored and want to find something to do...</p>
-              <p>How about you jam letters and words on that search field and see what you want to do.</p>
+            </div>
+            <hr>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Filter Activities -->
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="type-title">
+                <p>Select the type of activity</p>
+              </div>
+              <select name="type" id="select-type" class="form-control">
+                <option value="education">Education</option>
+                <option value="recreational">Recreational</option>
+                <option value="social">Social</option>
+                <option value="diy">DIY</option>
+                <option value="charity">Charity</option>
+                <option value="cooking">Cooking</option>
+                <option value="relaxation">Relaxation</option>
+                <option value="music">Music</option>
+                <option value="buyswork">Busy Work</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+              <div class="how-many-text">
+                <p>How many activities do you want to see</p>
+              </div>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+              <input type="text" class="form-control">
             </div>
           </div>
         </div>
       </div>
 
+      <!-- Search and Button -->
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
-          <!-- Search and Button -->
           <div class="input-area">
-            <input type="text" class="form-control" placeholder="Search things to do">
+            <!-- <input type="text" class="form-control" placeholder="Search things to do"> -->
 
             <button id="search-button">LETS GO!</button>
           </div>
         </div>
       </div>
-
-      <!-- Sort/Filter Activities -->
-      <!-- <div class="row">
-      <div class="col-md-4 col-md-offset-4">
-        <section id="sort-box">
-          <p>SORT</p>
-        </section>
-      </div>
-    </div> -->
 
       <!-- Collection of Activities -->
       <div class="row">
